packages/cli/snap-tests/command-lib/snap.txt
[1]> vite lib -h # should print the help message
file:///Volumes/code/vite-plus-workspace/vite-plus/packages/core/dist/tsdown/filename-DvJ5Js1a.js:1
import { RUNTIME_MODULE_ID } from "@voidzero-dev/vite-plus-core/rolldown";
         ^^^^^^^^^^^^^^^^^
SyntaxError: The requested module '@voidzero-dev/vite-plus-core/rolldown' does not provide an export named 'RUNTIME_MODULE_ID'
    at ModuleJob._instantiate (node:internal/modules/esm/module_job:228:21)
    at async ModuleJob.run (node:internal/modules/esm/module_job:337:5)
    at async onImport.tracePromise.__proto__ (node:internal/modules/esm/loader:651:26)
    at async asyncRunEntryPointWithESMLoader (node:internal/modules/run_main:117:5)

Node.js v<semver>

[1]> vite run lib # should build the library
$ vp lib src/index.ts
file:///Volumes/code/vite-plus-workspace/vite-plus/packages/core/dist/tsdown/filename-DvJ5Js1a.js:1
import { RUNTIME_MODULE_ID } from "@voidzero-dev/vite-plus-core/rolldown";
         ^^^^^^^^^^^^^^^^^
SyntaxError: The requested module '@voidzero-dev/vite-plus-core/rolldown' does not provide an export named 'RUNTIME_MODULE_ID'
    at ModuleJob._instantiate (node:internal/modules/esm/module_job:228:21)
    at async ModuleJob.run (node:internal/modules/esm/module_job:337:5)
    at async onImport.tracePromise.__proto__ (node:internal/modules/esm/loader:651:26)
    at async asyncRunEntryPointWithESMLoader (node:internal/modules/run_main:117:5)

Node.js v<semver>


━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
    Vite+ Task Runner • Execution Summary
━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

Statistics:   1 tasks • 0 cache hits • 1 cache misses • 1 failed 
Performance:  0% cache hit rate

Task Details:
────────────────────────────────────────────────
  [1] command-lib#lib: $ vp lib src/index.ts ✗ (exit code: 1)
      → Cache miss: no previous cache entry found
━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

[1]> ls dist # should have the library
ls: dist: No such file or directory

[1]> vite run lib # should hit cache
$ vp lib src/index.ts
file:///Volumes/code/vite-plus-workspace/vite-plus/packages/core/dist/tsdown/filename-DvJ5Js1a.js:1
import { RUNTIME_MODULE_ID } from "@voidzero-dev/vite-plus-core/rolldown";
         ^^^^^^^^^^^^^^^^^
SyntaxError: The requested module '@voidzero-dev/vite-plus-core/rolldown' does not provide an export named 'RUNTIME_MODULE_ID'
    at ModuleJob._instantiate (node:internal/modules/esm/module_job:228:21)
    at async ModuleJob.run (node:internal/modules/esm/module_job:337:5)
    at async onImport.tracePromise.__proto__ (node:internal/modules/esm/loader:651:26)
    at async asyncRunEntryPointWithESMLoader (node:internal/modules/run_main:117:5)

Node.js v<semver>


━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
    Vite+ Task Runner • Execution Summary
━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

Statistics:   1 tasks • 0 cache hits • 1 cache misses • 1 failed 
Performance:  0% cache hit rate

Task Details:
────────────────────────────────────────────────
  [1] command-lib#lib: $ vp lib src/index.ts ✗ (exit code: 1)
      → Cache miss: no previous cache entry found
━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
